# cli-agent

./: .cli_history  Cargo.toml  README.md
src/: frontend.rs  main.rs
static/: index.html
